public/css/darkStyle.css
/************************************************************************
Layout-elementer først, deretter resterende elementer, til sist klasser og id-er alfabetisk.
Forfatter: Silje U.
*************************************************************************/


/* Layout hiearkisk ********************************/
html,
body {
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100%;
}

body {
	color: rgb(227, 17, 71);
	background-color: #000; /*#333; */
	font-family: lato;
	margin: 0 auto;
}

nav {
	background-color: #FFF;
	height: auto;
	padding: 0.2em 1em;
}

aside { /* Brukes bare ved presetasjoneditor */
	width: 7em; /* Tilpasset innholde i sidebar  */
	background-color:#333;
	float: left;
	padding: 0.3em 0.5em;
	height: 100%;
}

main { /*Sentrert */
	/*height: 100%; blir kvitt unødvendig mellomrom over footer */
	margin: 0 auto;
	margin-bottom: 2em;  /* Tilsvarer footerens høyde */
}

section {
	padding: 0;
	margin: 0;
}

.blueDiv {
	width: 100%;
	background-color: darkblue;
	color: red;
}

.blackDiv {
	width: 100%;
	background-color: #000;
	color: red;
}

.textContainer {
	padding: 10px; 
	max-width: 32em; /* for å angi en leselig linjelengde */
	margin: 0 auto;
}

footer {
	width: 100%;
	background-color: white;
	height: 2em;
	padding: 0.6em 0;
	text-align: center;
	padding-bottom: 10px;
}



/* Non-layout elements  *************************************/

button {
	box-shadow: none;
	background-color: #ccc;
	appearance: none;
	margin: 6px 0px;
}

button:active {
	color: #fff;
	background-color: rgb(227, 17, 71);
	margin: 2px;
}

fieldset {
	border: none;
}

h1 {
	text-align: center;
}

hr {
	border: 0;
	border-top: 1px dotted #fff;
}

input {
	width: auto;   /* til regnbueruter var den 4em */
	margin: 5px;
}

menuitem a {
	color: red; 
	padding: 0 0.2em;
	text-decoration: none;
}

menuitem a:visited {
	color: maroon;
}

.noLinkStyle {
	text-decoration: none;
	color: red;
}

p {
	margin: 0.6em 2px;
}





/* ***************************************************************************  */
/* IDs and classes
/* ***************************************************************************  */

#divContainer {
	margin-top: 10px;
	padding-top: 10px;
	margin: 0 auto;
}

#editGrid {
	position: absolute;
	bottom: 50px;
	right: 50px;
	border-style: dashed;
	width: 640px;
	height: 360px;
}

.centered {
	text-align: center;
}

.content {
	position: absolute;
	border-style: solid;
	overflow: hidden;
	text-align: center;
	padding: 10px;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.logo {
	color: rgb(227, 17, 71);
	display: inline;
	font-size: 1.2em;
	font-weight: bold;
}

.right {
	float: right;
	padding: 0 2px;
}

ul.hidden {
	padding-left: 0;
}

ul.hidden li {
	list-style: none;
}

